# vecno-miner

./: Cargo.toml  README.md  build.rs  compile-cuda.bat  compile-cuda.sh  compile-opencl.ps1
integrations/hiveos/: createmanifest.sh  h-config.sh  h-run.sh  h-stats.sh
integrations/windows/: create_bat.sh
plugins/: README.md
plugins/cuda/: Cargo.toml  README.md
plugins/cuda/resources/: vecno-cuda-sm120.ptx  vecno-cuda-sm61.ptx  vecno-cuda-sm75.ptx  vecno-cuda-sm80.ptx  vecno-cuda-sm86.ptx  vecno-cuda-sm89.ptx  vecno-cuda-sm90.ptx
plugins/cuda/resources/old/: vecno-cuda-sm61.ptx  vecno-cuda-sm75.ptx  vecno-cuda-sm86.ptx
plugins/cuda/src/: lib.rs  worker.rs
plugins/cuda/vecno-cuda-native/src/: vecno-cuda.cu  xoshiro256starstar.c
plugins/opencl/: Cargo.toml  README.md
plugins/opencl/resources/: heavy_hash.cl  mem_hash.cl
plugins/opencl/src/: cli.rs  lib.rs  worker.rs
proto/: messages.proto  p2p.proto  rpc.proto
src/: cli.rs  interactivity.rs  lib.rs  main.rs  miner.rs  pow.rs  target.rs  vecnod_messages.rs  watch.rs
src/client/: grpc.rs  stratum.rs
src/client/stratum/: stratum_codec.rs
src/pow/: hasher.rs  mem_hash.rs
