[package]
name = "vecno-miner"
version = "0.0.4"
edition = "2021"
license = "MIT/Apache-2.0"
authors = ["Yoshiki"]
repository = "https://github.com/Vecno-Foundation/vecno-miner"
readme = "README.md"
description = "A fast CPU & GPU miner for Vecno written in Rust"
categories = ["command-line-utilities"]
keywords = ["blockchain", "cli", "vecno-miner", "vecno-blockchain"]
include = [
    "src/**/*.rs",
    "src/**/*.s",
    "proto/**",
    "Cargo.toml",
    "Cargo.lock",
    "build.rs",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md",
]

[dependencies]

tonic = "0.12"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
prost = "0.13.5"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
once_cell = "1"
num_cpus = "1"
rand = { version = "0.9.2", features = ["std_rng"] }
rand_chacha = "0.9.0"
clap = { version = "3.2.25", features = ["color", "derive"] }
log = "0.4"
env_logger = "0.11.8"
parking = { package = "parking_lot", version = "0.12", optional = true }
shuttle = { version = "0.8.0", optional = true }
libloading = "0.9.0"
tokio-util = { version = "0.7.0", features = ["codec"] }
serde_json = "1.0"
serde_repr = "0.1"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.21"
bytes = "1.1.0"
async-trait = "0.1"
num = "0.4"
nix = { version = "0.30.1", features = ["signal", "pthread"] }
hex = "0.4"
semver = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }
blake3 = "1.8.2"
simplelog = "0.12.2"
sysinfo = "0.37.2"
console = "0.16.2"
dialoguer = { version = "0.12.0", features = ["completion"] }
chrono = "0.4.41"
num-format = "0.4"
dashmap = "6.1.0"
num-traits = "0.2.19"

[features]
default = ["parking_lot"]
parking_lot = ["parking", "tokio/parking_lot"]
bench = []


[target.'cfg(target_os = "windows")'.dependencies]
kernel32-sys = "0.2"
win32console = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true

[build-dependencies]
tonic-build = { version = "0.8", default-features = false, features = ["prost", "transport"] }
cc = "1"
time = { version = "0.3", features = ["formatting"] }
winresource = "0.1"

[workspace]
members = ["plugins/*"]
default-members = [".", "plugins/cuda", "plugins/opencl"]
