[package]
name = "vecnoopencl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
vecno_miner = {path = "../../", package="vecno-miner"}
clap = { version = "3.0", features = ["color", "derive"]}
env_logger = "0.9"
opencl3 = {version = "0.7", features = ["CL_VERSION_2_1", "CL_VERSION_2_2", "CL_VERSION_3_0"]}
log = "0.4"
rand = "0.8"
include_dir = "0.7"
cl-sys = "0.4.3"
blake3 = "1.8.2"

[lib]
crate-type = ["cdylib"]

